31st may - 1.45am

--- a/food.html
+++ b/food.html
@@ -37,7 +37,7 @@
     </nav>
 </header>
 
-<body>
+<body  class="grid">
 
 <p class="subhead">MENU</p>
 
@@ -211,7 +211,7 @@
 
 
 <!--Footer-->
-<footer id="footer">
+<footer id="footer"  class="grid">
 
     <!--Social Media Icons-->
     <div>
