--- a/result.html
+++ b/result.html
@@ -37,7 +37,7 @@
     </nav>
 </header>
 
-<body>
+<body class="grid">
     <p class="subhead">SEARCH &nbsp; <img class="subhead-arrow" src="assets/icons/navigation arrow.png"> &nbsp; "OYSTERS"</p>
 
     <p id="return">
