--- a/search.html
+++ b/search.html
@@ -38,7 +38,7 @@
 </header>
 
 
-<body>
+<body class="grid">
     <p class="subhead">SEARCH</p>
 
     <h1>Search: <input type="text" class="search"></h1> 
