--- a/product.html
+++ b/product.html
@@ -38,7 +38,7 @@
 </header>
 
 
-<body>
+<body class="grid">
     <p class="subhead">SEARCH<img class="subhead-arrow" src="assets/icons/navigation arrow.png" alt="arrow">PRODUCT</p>
 
     <p id="return">
@@ -101,7 +101,7 @@
 
 
 <!--Footer-->
-<footer id="footer">
+<footer id="footer" class="grid">
 
     <!--Social Media Icons-->
     <div>
