31st may - 1.54am

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 </header>
 
 
-<body class="grid">
+<body class="page-grid">
 
 <!--Landing Header-->
-    <section id="landing-header" class="dark-bg">
+<section id="landing-header" class="dark-bg">
         <h2>Elevate Your Palate With Authentic Turkish Flavours</h2>
         
         <img class="landing-head-image" src="assets/landing/cover.jpg">
