31st may - 2.41am

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!--navigation bar-->
     <nav class="navbar">
-
+        <div></div>
         <!--pages-->
         <ul class="navbar">
             <li><a class="nav-pages" href="food.html">Food</a></li>
@@ -24,6 +24,7 @@
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
             <li><a class="nav-pages" href="about.html">About</a></li>
         </ul>
+        </div>
 
         <!--brand logo-->
         <div class="nav-logo">
