31st may -  4.25am

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!--navigation bar-->
     <nav class="navbar">
-        <div></div>
+
         <!--pages-->
         <ul class="navbar">
             <li><a class="nav-pages" href="food.html">Food</a></li>
@@ -24,7 +24,6 @@
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
             <li><a class="nav-pages" href="about.html">About</a></li>
         </ul>
-        </div>
 
         <!--brand logo-->
         <div class="nav-logo">
@@ -39,7 +38,7 @@
 </header>
 
 
-<body class="page-grid">
+<body class="grid-system">
 
 <!--Landing Header-->
 <section id="landing-header" class="dark-bg">
