2nd june -  5.24am

--- a/food.html
+++ b/food.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/button.css">
     <link rel="stylesheet" type="text/css" href="css/image.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
+    <link rel="stylesheet" type="text/css" href="css/spacing.css">
 </head>
 
 
@@ -212,42 +213,55 @@
 
 
 <!--Footer-->
-<footer id="footer"  class="grid">
+<footer id="footer">
 
-    <!--Social Media Icons-->
-    <div>
-        <h3 class="footer-header">Social Media</h3> 
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/facebook.png" alt="facebook"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/twitter.png" alt="twitter"></a>
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en"><img class="footer-socials-icons" src="assets/icons/instagram.png" alt="instagram"></a>
-    </div>
+    <div class="grid-system">
 
-    <!--Directory-->
-    <div>
-        <h3 class="footer-header">Get To Us</h3>
-            <div>
-                <p class="footer-gtu-name">Contact</p>
-                <p class="footer-gtu-description">+02 9188 1581</p>
-            </div>
+        <!--Social Media Icons-->
+        <h3 id="footer-1" class="footer-header">Social Media</h3>
 
-            <div>
-                <p class="footer-gtu-name">Address</p>
-                <p class="footer-gtu-description">5/23 Barangaroo Ave Barangaroo NSW 2000</p>
-            </div>
+        <h3 id="footer-2" class="footer-header">Get To Us</h3>
 
-            <div>
-                <p class="footer-gtu-name">Email</p>
-                <p class="footer-gtu-description">bookings@anason.com.au</p>
-            </div>
+        <section id="footer-1" class="footer-socials">
 
-            <div>
-                <p class="footer-gtu-name">Opening Hours</p>
-                <p class="footer-gtu-description">Till 12pm Everyday</p>
-            </div>
-    </div>
+            <a href="https://www.instagram.com/anasonmezebar/?hl=en">
+                <img class="footer-socials-icons" src="assets/icons/facebook.png" alt="facebook">
+            </a>
 
-    <div>
-        <p class="footer-copyright">&copy; 2023 Anason. All rights reserved.</p>
+            <a href="https://www.instagram.com/anasonmezebar/?hl=en">
+                <img class="footer-socials-icons" src="assets/icons/twitter.png" alt="twitter">
+            </a>
+
+            <a href="https://www.instagram.com/anasonmezebar/?hl=en">
+                <img class="footer-socials-icons" src="assets/icons/instagram.png" alt="instagram">
+            </a>
+        </section>
+
+        <!--Directory-->
+
+        <div id="footer-2">
+            <p class="footer-gtu-name">Contact</p>
+            <p id="footer-3" class="footer-gtu-name">Address</p>
+        </div>
+
+        <div id="footer-3">
+            <p class="footer-gtu-description">+02 9188 1581</p>
+            <p class="footer-gtu-description">5/23 Barangaroo Ave <br> Barangaroo NSW 2000</p>
+        </div>
+
+        <div id="footer-4">
+            <p class="footer-gtu-name">Email</p>
+            <p class="footer-gtu-name">Opening Hours</p>
+        </div>
+
+        <div id="footer-5">
+            <p id="footer-column-5" class="footer-gtu-description">bookings@anason.com.au</p>
+            <p class="footer-gtu-description">Till 12pm Everyday</p>
+        </div>
+    
+        <div id="footer-1"> 
+            <p class="footer-copyright">&copy; 2023 Anason. All rights reserved.</p>
+        </div>
     </div>
 </footer>
 </html>
