--- a/drinks.html
+++ b/drinks.html
@@ -16,7 +16,7 @@
 <header class="grid">
 
     <!--navigation bar-->
-    <nav class="navbar">
+    <nav class="navbar-main">
 
         <!--pages-->
         <ul class="navbar">
@@ -37,7 +37,6 @@
         </div>
     </nav>
 </header>
-
 
 <body class="grid">
     <!--sub-navigation bar-->
