--- a/food.html
+++ b/food.html
@@ -16,7 +16,7 @@
 <header class="grid">
 
     <!--navigation bar-->
-    <nav class="navbar">
+    <nav class="navbar-main">
 
         <!--pages-->
         <ul class="navbar">
