--- a/about.html
+++ b/about.html
@@ -38,42 +38,57 @@
     </nav>
 </header>
 
-
+<br>
 <body class="grid">
-    <!--sub-navigation bar-->
-    <p class="subhead">ABOUT</p>
-
-    <h1>About Us</h1>
+    <div id="specialcontain">
+        <div class="content dark-bg grid-system">
+            <!--sub-navigation bar-->
+            <p class="subhead">ABOUT</p>
+        </div>
+    </div>
+    <br>
 
     <div class="about-header">
+        <div class="content grid-system">
+            <h1>ABOUT US</h1>
 
-    <p>Invoking the concept of the traditional restaurants and bars of Istanbul, the meyhanes&#46; True to its Turkish roots, the drinks menu of Sydney&#8217;s most popular meyhane is as important as the food&#46; Sample traditional Turkish Raki, sip your way through the wine regions of Turkey, or celebrate life with signature cocktails&#46;</P>
-    <p>The venue&#8217;s design reflects the modern side of Istanbul with the typical Bosphorus Blue being prominent all around the restaurant. In typical meyhane style, Anason is open for drinks accompanied by mezes or for a full feast. Be our guest and let us take you on a journey to the Bosphorus to sample some of Turkey&#8217;s famous hospitality!</P>
-
-    <img class="about-page-full-image" src="assets/other_images/about-01.jpg" alt="a table of food">
+            <P id="long-text2">All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
+            <P id="long-text3"> When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum. We believe in using fresh, quality and seasonal Sydney ingredients, and work with a range of premium, boutique suppliers.</p>
+        </div>
+        <br>
+        <div class="content dark-bg grid-system">
+            <img id="large-item" class="specials-header"src="assets/other_images/about-01.jpg" alt="a table of food">
+        </div>
     </div>
-
+    <br>
 
     <!--Our Story-->
     <div id="about-our-story">
-        <h2>Our Story</h2>
+        <div class="content grid-system">
+            <h2 id="landing-header2">Our Story</h2>
 
-        <p>Renowned chef and cookbook author Somer Sivrioglu&#8217;s acclaimed Balmain restaurant Efendy is famous for providing Sydneysiders with the authentic taste of Turkey. In February 2016, Somer brought his own culinary flair to the city&#8217;s newest development, Barangaroo.</p>
-        <p>Sivrioglu is joined by acclaimed Executive Chef Arman Uz in creating Anason&#8217;s seasonal, modern Turkish menus and providing Sydney with its own waterfront meyhane.</p>
+            <p id="long-text2">Renowned chef and cookbook author Somer Sivrioglu&#8217;s acclaimed Balmain restaurant Efendy is famous for providing Sydneysiders with the authentic taste of Turkey. In February 2016, Somer brought his own culinary flair to the city&#8217;s newest development, Barangaroo.</p>
+            <p id="long-text3">Sivrioglu is joined by acclaimed Executive Chef Arman Uz in creating Anason&#8217;s seasonal, modern Turkish menus and providing Sydney with its own waterfront meyhane.</p>
 
-        <img class="about-page-square-image" src="assets/other_images/about-03.jpg" alt="chef anason">
+            <img class="about-page-square-image" id="two-images" src="assets/other_images/about-03.jpg" alt="chef anason">
         
-        <img class="about-page-square-image" src="assets/other_images/about-02.jpg" alt="team">
+            <img class="about-page-square-image" id="two-images2" src="assets/other_images/about-02.jpg" alt="team">
+
+        </div>
     </div>
+    <br>
 
 
     <!--Our Food-->
     <div id="about-our-food">
-        <h2>Our Food</h2>
+        <div class="content grid-system">
+            <h2 id="landing-header2">Our Food</h2>
 
-        <P>All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
-        <P>When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum. We believe in using fresh, quality and seasonal Sydney ingredients, and work with a range of premium, boutique suppliers.</p>
+            <P id="long-text2">All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
+            <P id="long-text3"> When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum. We believe in using fresh, quality and seasonal Sydney ingredients, and work with a range of premium, boutique suppliers.</p>
+        </div>
     </div>
+    <br>
 
 
     <!--Reserve Now Button-->
