--- a/search.html
+++ b/search.html
@@ -37,50 +37,57 @@
         </div>
     </nav>
 </header>
-
+<br>
 
 <body class="grid">
-    <p class="subhead">SEARCH</p>
+    <div class="content dark-bg grid-system">
+        <!--sub-navigation bar-->
+        <p class="subhead">SEARCH</p>
+    </div>
+    <br>
+    <div class="content dark-bg grid-system">
+        <h1 id="specialsearch">Search: <input type="text" class="search"></h1> 
+    </div>
 
-    <h1>Search: <input type="text" class="search"></h1> 
     
     <hr>
 
 <!--Recommendation-->
-<section id="results-recommendations">
+<section id="landing-recommendations" class="content grid-system">
 
-        <figure>
-            <img class="food-image" src="assets/landing/recommend_01.jpg" alt="manti">
-            <figcaption>
-                <p class="food-name">Manti ( 38 )</p>
-                <p class="food-description">Mini dough parcels, beef filling, garlic yoghurt, mint, sumac</p>
-            </figcaption>
-        </figure>
+    <figure id="item-grid-1">
+        <img class="food-image" src="assets/landing/recommend_01.jpg" alt="manti">
+        <figcaption>
+            <p class="food-name">Manti ( 38 )</p>
+            <p class="food-description">Mini dough parcels, beef filling, garlic yoghurt, mint, sumac</p>
+        </figcaption>
+    </figure>
 
-        <figure>
-            <img class="food-image" src="assets/landing/recommend_02.jpg" alt="1/2 roasted chicken">
-            <figcaption>
-                <p class="food-name">1/2 Roasted Chicken ( 48 )</p>
-                <p class="food-description">Pomegranate molasses, garlic toum, pickles</p>
-            </figcaption>
-        </figure>
+    <figure id="item-grid-2">
+        <img class="food-image" src="assets/landing/recommend_02.jpg" alt="1/2 roasted chicken">
+        <figcaption>
+            <p class="food-name">1/2 Roasted Chicken ( 48 )</p>
+            <p class="food-description">Pomegranate molasses, garlic toum, pickles</p>
+        </figcaption>
+    </figure>
 
-        <figure>
-            <img class="food-image" src="assets/landing/recommend_03.jpg" alt="hunkar begendi">
-            <figcaption>
-                <p class="food-name">Hunkar Begendi ( 58 )</p>
-                <p class="food-description">Lamb loin, smoked eggplant puree, burnt butter</p>
-            </figcaption>
-        </figure>
+    <figure id="item-grid-3">
+        <img class="food-image" src="assets/landing/recommend_03.jpg" alt="hunkar begendi">
+        <figcaption>
+            <p class="food-name">Hunkar Begendi ( 58 )</p>
+            <p class="food-description">Lamb loin, smoked eggplant puree, burnt butter</p>
+        </figcaption>
+    </figure>
 
-        <figure>
-            <img class="food-image" src="assets/landing/recommend_04.jpg" alt="yogurtlu kebab">
-            <figcaption>
-                <p class="food-name">Yogurtlu Kebab ( 86 )</p>
-                <p class="food-description">Wagyu tri tip, tomato, yoghurt, crispy Turkish bread</p>
-            </figcaption>
-        </figure>
-    </section>
+    <figure id="item-grid-4">
+        <img class="food-image" src="assets/landing/recommend_04.jpg" alt="yogurtlu kebab">
+        <figcaption>
+            <p class="food-name">Yogurtlu Kebab ( 86 )</p>
+            <p class="food-description">Wagyu tri tip, tomato, yoghurt, crispy Turkish bread</p>
+        </figcaption>
+    </figure>
+</section>
+
 
     
 <!--Footer-->
