--- a/about.html
+++ b/about.html
@@ -38,45 +38,45 @@
     </nav>
 </header>
 
-<br>
-<body class="grid">
-    <div id="specialcontain">
-        <div class="content dark-bg grid-system">
-            <!--sub-navigation bar-->
-            <p class="subhead">ABOUT</p>
+
+<body>
+    
+    <!--sub-navigation bar-->
+    <div class="content grid-system">
+        <p class="subhead">ABOUT</p>
+    </div>
+
+    <!-- h1 header -->
+    <div class="content grid-system">
+        <h1 id="page-header">ABOUT US</h1>
+    </div>
+
+    <div class="content grid-system">
+        <div class="page-description">
+            <p>All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
+                <br>
+            <p> When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum. We believe in using fresh, quality and seasonal Sydney ingredients, and work with a range of premium, boutique suppliers.</p>
         </div>
     </div>
-    <br>
 
-    <div class="about-header">
-        <div class="content grid-system">
-            <h1>ABOUT US</h1>
-
-            <P id="long-text2">All our food menus are designed to share with a strong focus on vegetarian and seafood dishes. Our ever-changing menus are young, fresh and vibrant showcasing the best of contemporary Turkish cuisine.</p>
-            <P id="long-text3"> When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum. We believe in using fresh, quality and seasonal Sydney ingredients, and work with a range of premium, boutique suppliers.</p>
-        </div>
-        <br>
-        <div class="content dark-bg grid-system">
-            <img id="large-item" class="specials-header"src="assets/other_images/about-01.jpg" alt="a table of food">
-        </div>
+    <!-- header image -->
+    <div class="content grid-system">
+        <img id="large-item" class="specials-header"src="assets/other_images/about-01.jpg" alt="a table of food">
     </div>
-    <br>
 
-    <!--Our Story-->
-    <div id="about-our-story">
-        <div class="content grid-system">
-            <h2 id="landing-header2">Our Story</h2>
+    <!-- our story section-->
+    <div id="about-our-story" class="content grid-system">
 
-            <p id="long-text2">Renowned chef and cookbook author Somer Sivrioglu&#8217;s acclaimed Balmain restaurant Efendy is famous for providing Sydneysiders with the authentic taste of Turkey. In February 2016, Somer brought his own culinary flair to the city&#8217;s newest development, Barangaroo.</p>
-            <p id="long-text3">Sivrioglu is joined by acclaimed Executive Chef Arman Uz in creating Anason&#8217;s seasonal, modern Turkish menus and providing Sydney with its own waterfront meyhane.</p>
+        <h2>Our Story</h2>
 
-            <img class="about-page-square-image" id="two-images" src="assets/other_images/about-03.jpg" alt="chef anason">
+        <p id="page-description">Renowned chef and cookbook author Somer Sivrioglu&#8217;s acclaimed Balmain restaurant Efendy is famous for providing Sydneysiders with the authentic taste of Turkey. In February 2016, Somer brought his own culinary flair to the city&#8217;s newest development, Barangaroo.</p>
+        <p id="page-description">Sivrioglu is joined by acclaimed Executive Chef Arman Uz in creating Anason&#8217;s seasonal, modern Turkish menus and providing Sydney with its own waterfront meyhane.</p>
+
+        <img class="about-page-square-image" id="two-images-1" src="assets/other_images/about-03.jpg" alt="chef anason">
         
-            <img class="about-page-square-image" id="two-images2" src="assets/other_images/about-02.jpg" alt="team">
+        <img class="about-page-square-image" id="two-images-2" src="assets/other_images/about-02.jpg" alt="team">
 
-        </div>
     </div>
-    <br>
 
 
     <!--Our Food-->
