2nd june - 11.46pm

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 <!--Specials-->
-<section id="landing-specials" class="content dark-bg">
+<section id="landing-specials" class="dark-bg">
     
         <div class="dynamic-logo-container">
         <img class="dynamic-logo" src="assets/icons/anason_festival_white.png">
@@ -107,7 +107,7 @@
 
 
 <!--Philosophy-->
-<section id="landing-philosophy" class="content grid-system">
+<section id="landing-philosophy" class="grid-system">
         
         <h2 id="landing-header">Anason Philosophy</h2>
 
@@ -122,7 +122,7 @@
 
 
 <!--Recommendation-->
-<section id="landing-recommendations" class="content grid-system">
+<section id="landing-recommendations" class="grid-system">
         <h2 id="landing-header">Recommendations</h2>
 
         <figure id="item-grid-1">
