--- a/search.html
+++ b/search.html
@@ -128,13 +128,13 @@
         </div>
 
         <div id="footer-4">
-            <p class="footer-gtu-name">Email</p>
             <p class="footer-gtu-name">Opening Hours</p>
+            <p class="footer-gtu-name">Email</p>
         </div>
 
         <div id="footer-5">
-            <p id="footer-column-5" class="footer-gtu-description">bookings@anason.com.au</p>
             <p class="footer-gtu-description">Till 12pm Everyday</p>
+            <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
         <div id="footer-1"> 
