3rd june - 2.55am

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </figure>
         </div>
 
-        <div class="button-link landing-menu-buttom">
+        <div class="landing-menu-buttom">
             <a href="food.html">
                 <img class="menu-button" src="assets/buttons/menu_button_white.png">
             </a>
