--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<header class="grid">
+<header>
 
     <!--navigation bar-->
     <nav class="navbar-main">
@@ -45,7 +45,7 @@
         <p class="subhead">ABOUT</p>
     </div>
 
-
+    
     <!-- h1 header -->
     <div class="grid-system">
         <h1 id="page-header">ABOUT US</h1>
