3rd june - 5.44am

--- a/drinks.html
+++ b/drinks.html
@@ -50,6 +50,7 @@
         <h1 id="page-header">Drinks Menu</h1>
     </div>
     
+    <!--in-page-navigation-->
     <section class="grid-system">
         <nav id="in-page-nav">
             <ul>
@@ -188,7 +189,6 @@
                     <p class="drink-price price-2">( 22 )</p>
                 </div>
 
-        <!----> 
         <div class="drink-item section-1">
             <dl>
                 <dt>Silk Road Margarita</dt>
@@ -282,7 +282,6 @@
                 </dl>
             </div>  
     </section>  
-
 </body>
 
 
