--- a/food.html
+++ b/food.html
@@ -44,7 +44,7 @@
     <!--header image-->
     <section id="landing-top" class="dark-bg">
         
-        <img id="landing-header" class="landing-head-image" src="assets/landing/cover.jpg">
+        <img id="food-header" class="food-head-image" src="assets/food/menu_header.jpg">
 
     </section>
 
@@ -89,7 +89,7 @@
 
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="seafood" src="assets/product_image/rock_oysters_01.jpg" alt="rock oysters">
+                <img class="food-image" data-category="seafood" src="assets/food/menu_entree_01.jpg" alt="rock oysters">
             <figcaption>
                 <p class="food-name">Rock Oysters ( 8ea )</p>
                 <p class="food-description">Tarama, squid ink, beach succulents</p>
@@ -99,7 +99,7 @@
 
         <figure id="item-grid-2">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="vegetarian" src="assets/product_image/stone_baked_village_bread.jpg" alt="stone baked village bread">
+                <img class="food-image" data-category="vegetarian" src="assets/food/menu_entree_02.jpg" alt="stone baked village bread">
             <figcaption>
                 <p class="food-name">Stone Baked Bread ( 12 )</p>
                 <p class="food-description">Tarama, squid ink, beach succulents</p>
@@ -116,7 +116,7 @@
 
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="seafood" src="assets/product_image/tarak_scallop.jpg" alt="tarak scallop">
+                <img class="food-image" data-category="seafood" src="assets/food/menu_sides_01.jpg" alt="tarak scallop">
             <figcaption>
                 <p class="food-name">Tarak Scallop ( 25 )</p>
                 <p class="food-description">Baba ganoush and daikon</p>
@@ -126,7 +126,7 @@
 
         <figure id="item-grid-2">
                 <a href="product.html" class="figure-link">
-                    <img class="food-image" data-category="vegetarian" src="assets/product_image/smoked_beetroot_tartare.jpg" alt="smoke beetroot tartare">
+                    <img class="food-image" data-category="vegetarian" src="assets/food/menu_sides_02.jpg" alt="smoke beetroot tartare">
                 <figcaption>
                     <p class="food-name">Smoke Beetroot Tartare ( 18 )</p>
                     <p class="food-description">Labna, rhubard and blood plums</p>
@@ -136,7 +136,7 @@
 
         <figure id="item-grid-3">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="vegetarian" src="assets/product_image/charred_cabbage.jpg" alt="charred cabbage">
+                <img class="food-image" data-category="vegetarian" src="assets/food/menu_sides_03.jpg" alt="charred cabbage">
             <figcaption>
                 <p class="food-name">Charred Cabbage ( 22 )</p>
                 <p class="food-description">Dill, feta, puffed rice, nigella</p>
@@ -146,7 +146,7 @@
 
         <figure id="item-grid-4">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="vegetarian" src="assets/product_image/fried_potato.jpg" alt="fried potato">
+                <img class="food-image" data-category="vegetarian" src="assets/food/menu_sides_04.jpg" alt="fried potato">
                 <figcaption>
                     <p class="food-name">Fried Potato ( 18 )</p>
                     <p class="food-description">Fried potato with tartare sauce</p>
@@ -163,7 +163,7 @@
 
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="seafood" src="assets/product_image/john_dory.jpeg" alt="john dory">
+                <img class="food-image" data-category="seafood" src="assets/food/menu_mains_01.jpg" alt="john dory">
                 <figcaption>
                     <p class="food-name">John Dory ( 45 )</p>
                     <p class="food-description">Confit garlic, parsley and citrus sauce</p>
@@ -173,7 +173,7 @@
         
         <figure id="item-grid-2">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="beef" src="assets/product_image/hunkar_begendi.jpg" alt="hunkar begendi">
+                <img class="food-image" data-category="beef" src="assets/food/menu_mains_02.jpg" alt="hunkar begendi">
                 <figcaption>
                     <p class="food-name">Hunkar Begendi ( 58 )</p>
                     <p class="food-description">Lamb loin, smoked eggplant puree, burnt butter</p>
@@ -183,7 +183,7 @@
 
         <figure id="item-grid-3">
             <a href="product.html" class="figure-link">
-                <img class="food-image" src="assets/product_image/roasted_chicken.jpg" alt="1/2 roasted chicken">
+                <img class="food-image" src="assets/food/menu_mains_03.jpg" alt="1/2 roasted chicken">
                 <figcaption>
                     <p class="food-name">1/2 Roasted Chicken ( 48 )</p>
                     <p class="food-description">Pomegranate molasses, garlic toum, pickles</p>
@@ -193,7 +193,7 @@
 
         <figure id="item-grid-4">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="beef" src="assets/product_image/yogurtlu_kebab.jpeg" alt="yogurtlu kebab">
+                <img class="food-image" data-category="beef" src="assets/food/menu_mains_04.jpg" alt="yogurtlu kebab">
                 <figcaption>
                     <p class="food-name">Yogurtlu Kebab ( 86 )</p>
                     <p class="food-description">Wagyu tri tip, tomato, yoghurt, crispy Turkish bread</p>
@@ -202,7 +202,7 @@
             </figure>
 
         <figure id="item-grid-1">
-            <img class="food-image" data-category="beef" src="assets/product_image/manti.jpg" alt="manti">
+            <img class="food-image" data-category="beef" src="assets/food/menu_mains_05.jpg" alt="manti">
                 <figcaption>
                     <p class="food-name">Manti ( 38 )</p>
                     <p class="food-description">Mini dough parcels, beef filling, garlic yoghurt, mint, sumac</p>
@@ -219,7 +219,7 @@
 
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
-                <img class="food-image" data-category="vegetarian" src="assets/product_image/charcoal_merengue.jpg" alt="charcoal merengue">
+                <img class="food-image" data-category="vegetarian" src="assets/food/menu_dessert_01.jpg" alt="charcoal merengue">
                 <figcaption>
                     <p class="food-name">Charcoal Merengue ( 20 )</p>
                     <p class="food-description">Fresh berries and mastika cream</p>
@@ -228,7 +228,7 @@
             </figure>
 
         <figure id="item-grid-2">
-            <img class="food-image" data-category="vegetarian" src="assets/product_image/cheesecake.jpg" alt="cheesecake">
+            <img class="food-image" data-category="vegetarian" src="assets/food/menu_dessert_02.jpg" alt="cheesecake">
                 <figcaption>
                     <p class="food-name">Tilba Haloumi ( 8 )</p>
                     <p class="food-description">Local honey and Lavender oil</p>
