3rd june - 5.57pm

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <link rel="stylesheet" type="text/css" href="css/image.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 
-<header class="grid">
+<header>
 
     <!--navigation bar-->
     <nav class="navbar-main">
 
         <!--pages-->
-        <ul class="navbar">
+        <ul class="navlist">
             <li><a class="nav-pages" href="food.html">Food</a></li>
             <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
