--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <nav class="navbar-main">
 
         <!--pages-->
-        <ul class="navbar">
+        <ul class="navlist">
             <li><a class="nav-pages" href="food.html">Food</a></li>
             <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
