--- a/drinks.html
+++ b/drinks.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
 </head>
 
-<header class="grid">
+
+<header>
 
     <!--navigation bar-->
     <nav class="navbar-main">
 
         <!--pages-->
-        <ul class="navbar">
+        <ul class="navlist">
             <li><a class="nav-pages" href="food.html">Food</a></li>
             <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
