--- a/result.html
+++ b/result.html
@@ -13,13 +13,13 @@
 </head>
 
 
-<header class="grid">
+<header>
 
     <!--navigation bar-->
     <nav class="navbar-main">
 
         <!--pages-->
-        <ul class="navbar">
+        <ul class="navlist">
             <li><a class="nav-pages" href="food.html">Food</a></li>
             <li><a class="nav-pages" href="drinks.html">Drinks</a></li>
             <li><a class="nav-pages" href="reserve.html">Reserve</a></li>
@@ -37,6 +37,7 @@
         </div>
     </nav>
 </header>
+
 
 <body class="grid">
     <p class="subhead">SEARCH &nbsp; <img class="subhead-arrow" src="assets/icons/navigation arrow.png"> &nbsp; "OYSTERS"</p>
