3rd june - 8.04pm

--- a/food.html
+++ b/food.html
@@ -40,10 +40,10 @@
 
 
 
-<body class="grid">
+<body>
 
     <!--header image-->
-    <section id="landing-top" class="dark-bg">
+    <section id="food-top">
         
         <img id="food-header" class="food-head-image" src="assets/food/menu_header.jpg">
 
