3rd june - 8.09pm

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <header>
 
     <!--navigation bar-->
-    <nav class="navbar-main">
+    <nav class="navbar">
 
         <!--pages-->
         <ul class="navlist">
