--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
 <header>
 
     <!--navigation bar-->
-    <nav class="navbar-main">
+    <nav class="navbar">
 
         <!--pages-->
         <ul class="navlist">
