3rd june - 9.03pm

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/food.css">
 </head>
 
 
@@ -183,7 +184,7 @@
 <!--Social Media-->
 <section id="landing-socialmedia">
 
-    <div class="grid-system">
+    <div class="grid-system dark-bg">
         <h2 id="landing-header">Social Media</h2>
 
         <figure id="item-grid-1">
@@ -209,7 +210,7 @@
 
     <div class="button-link">
         <a href="https://www.instagram.com/anasonmezebar/?hl=en">
-            <img class="instagram-button" src="assets/buttons/instagram_blue.png">
+            <img class="instagram-button" src="assets/buttons/instagram_white.png">
         </a>
     </div>
     </section>
