--- a/search.html
+++ b/search.html
@@ -53,45 +53,54 @@
     <hr>
 
 <!--Recommendation-->
-<section id="landing-recommendations" class="content grid-system">
+<section id="search-recommendations" class="grid-system">
+
+    <h2>Recommendations</h2>
 
     <figure id="item-grid-1">
-        <img class="food-image" src="assets/landing/recommend_01.jpg" alt="manti">
+        <a href="product.html" class="figure-link">
+            <img class="food-image" src="assets/landing/recommend_02.jpg" alt="1/2 roasted chicken">
         <figcaption>
-            <p class="food-name">Manti ( 38 )</p>
-            <p class="food-description">Mini dough parcels, beef filling, garlic yoghurt, mint, sumac</p>
+            <p class="food-name">1/2 Roasted Chicken</p>
+            <p class="food-description">Pomegranate molasses, garlic toum, pickles</p>
         </figcaption>
+    </a>
     </figure>
 
     <figure id="item-grid-2">
-        <img class="food-image" src="assets/landing/recommend_02.jpg" alt="1/2 roasted chicken">
+        <a href="product.html" class="figure-link">
+            <img class="food-image" src="assets/landing/recommend_01.jpg" alt="manti">
         <figcaption>
-            <p class="food-name">1/2 Roasted Chicken ( 48 )</p>
-            <p class="food-description">Pomegranate molasses, garlic toum, pickles</p>
+            <p class="food-name">Manti</p>
+            <p class="food-description">Mini dough parcels, beef filling, garlic yoghurt, mint, sumac</p>
         </figcaption>
+    </a>
     </figure>
 
     <figure id="item-grid-3">
-        <img class="food-image" src="assets/landing/recommend_03.jpg" alt="hunkar begendi">
+        <a href="product.html" class="figure-link">
+            <img class="food-image" src="assets/landing/recommend_03.jpg" alt="hunkar begendi">
         <figcaption>
-            <p class="food-name">Hunkar Begendi ( 58 )</p>
+            <p class="food-name">Hunkar Begendi</p>
             <p class="food-description">Lamb loin, smoked eggplant puree, burnt butter</p>
         </figcaption>
+    </a>
     </figure>
 
     <figure id="item-grid-4">
-        <img class="food-image" src="assets/landing/recommend_04.jpg" alt="yogurtlu kebab">
+        <a href="product.html" class="figure-link">
+            <img class="food-image" src="assets/landing/recommend_04.jpg" alt="yogurtlu kebab">
         <figcaption>
-            <p class="food-name">Yogurtlu Kebab ( 86 )</p>
+            <p class="food-name">Yogurtlu Kebab</p>
             <p class="food-description">Wagyu tri tip, tomato, yoghurt, crispy Turkish bread</p>
         </figcaption>
+    </a>
     </figure>
 </section>
 
-
     
 <!--Footer-->
-<footer id="footer">
+<footer id="footer" class="search-footer">
 
     <div class="grid-system">
 
