--- a/food.html
+++ b/food.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anason</title>
+    <title>Food Menu</title>
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/button.css">
     <link rel="stylesheet" type="text/css" href="css/image.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/food.css">
+    <script src="js/general.js"></script>
 </head>
 
 
@@ -71,22 +74,71 @@
     </div>
 
     <!--in-page-navigation-->
-    <section class="grid-system">
-        <nav id="in-page-nav">
+    <div class="grid-system in-page-navbar">
+        <nav class="grid-system" id="in-page-nav">
             <ul>
+                <li><a class="in-page-menu" href="#specials">Specials</a></li>
                 <li><a class="in-page-menu" href="#entree">Entree</a></li>
                 <li><a class="in-page-menu" href="#sides">Sides</a></li>
                 <li><a class="in-page-menu" href="#mains">Mains</a></li>
                 <li><a class="in-page-menu" href="#dessert">Dessert</a></li>
-        </ul>
+            </ul>
         </nav>
-    </section>
+    </div>
+    <hr>
+
+
+     <!--Specials-->
+     <section id="specials" class="grid-system">
+
+        <h2 class="food-h2">Specials</h2>
+
+            <figure id="item-grid-1">
+                <a href="product.html" class="figure-link">
+                    <img class="food-image" data-category="seafood" src="assets/food/menu_sides_01.jpg" alt="tarak scallop">
+                <figcaption>
+                    <p class="food-name">Tarak Scallop ( 25 )</p>
+                    <p class="food-description">Baba ganoush and daikon</p>
+                </figcaption>
+            </a>
+            </figure>
+
+            <figure id="item-grid-2">
+                <a href="product.html" class="figure-link">
+                    <img class="food-image" data-category="vegetarian" src="assets/food/menu_sides_03.jpg" alt="charred cabbage">
+                <figcaption>
+                    <p class="food-name">Charred Cabbage ( 22 )</p>
+                    <p class="food-description">Dill, feta, puffed rice, nigella</p>
+                </figcaption>
+            </a>
+            </figure>
+
+            <figure id="item-grid-3">
+                <a href="product.html" class="figure-link">
+                    <img class="food-image" data-category="seafood" src="assets/food/menu_mains_01.jpg" alt="john dory">
+                    <figcaption>
+                        <p class="food-name">John Dory ( 45 )</p>
+                        <p class="food-description">Confit garlic, parsley and citrus sauce</p>
+                    </figcaption>
+            </a>
+            </figure>
+    
+            <figure id="item-grid-4">
+                <a href="product.html" class="figure-link">
+                    <img class="food-image" data-category="vegetarian" src="assets/food/menu_dessert_01.jpg" alt="charcoal merengue">
+                    <figcaption>
+                        <p class="food-name">Charcoal Merengue ( 20 )</p>
+                        <p class="food-description">Fresh berries and mastika cream</p>
+                    </figcaption>
+                </a>
+                </figure>  
+        </section>
 
     
     <!--Entree-->
     <section id="entree" class="grid-system">
 
-    <h2>Entree</h2>
+    <h2 class="food-h2">Entree</h2>
 
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
@@ -113,7 +165,7 @@
     <!--Sides-->
     <section id="sides" class="grid-system">
 
-        <h2>Sides</h2>
+        <h2 class="food-h2">Sides</h2>
 
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
@@ -160,7 +212,7 @@
     <!--Mains-->
     <section id="mains" class="grid-system">
 
-        <h2>Mains</h2>
+        <h2 class="food-h2">Mains</h2>
 
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
@@ -216,7 +268,7 @@
     <!--Dessert-->
     <section id="dessert" class="grid-system">
 
-        <h2>Dessert</h2>
+        <h2 class="food-h2">Dessert</h2>
 
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
