--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/image.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
-    <script src="js/general.js"></script>
+    <script src="js/reserve.js"></script>
 </head>
 
 <header>
@@ -61,7 +61,7 @@
         </div>
         <div>
             <label>Email</label>
-            <input type="text" name="Email">
+            <input type="email" name="Email" id="emailInput" required>
         </div>
         <div>
             <label>Special Requirement</label>
