--- a/reserve.payment.html
+++ b/reserve.payment.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/image.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
-    <script src="js/general.js"></script>
+    <script src="js/reserve.js"></script>
 </head>
 <header>
 
@@ -38,20 +38,58 @@
 </header>
 <body class="grid">
     <div class="grid-system">
-        <p class="subhead">DRINKS</p>
+        <p class="subhead">PAYMENT</p>
     </div>
 
      <!-- h1 header -->
      <div class="grid-system">
-        <h1 id="page-header">Drinks Menu</h1>
+        <h1 id="page-header">PAYMENT</h1>
     </div>
     <br>
-    <h1>Reservation Details</h1>
-    <p>First Name: <span id="firstName"></span></p>
-    <p>Last Name: <span id="lastName"></span></p>
-    <p>Mobile: <span id="mobile"></span></p>
-    <p>Email: <span id="email"></span></p>
-    <p>Special Requirement: <span id="specialRequirement"></span></p>
+    <section id="leftpart">
+        <p>No. of Guest: <span id="guest">&times; $50</span></p>
+        <p>First Name: <span id="firstName"></span></p>
+        <p>Last Name: <span id="lastName"></span></p>
+        <p>Mobile: <span id="mobile"></span></p>
+        <p>Email: <span id="email"></span></p>
+        <p>Special Requirement: <span id="specialRequirement"></span></p>
+    </section>
+    <section id="rightpart">
+        <h3>CARD DETAILS</h3>
+        <form>
+            <div>
+                <label>First Name:</label>
+            </div>
+            <div>
+                <input type="text">
+            </div>
+            <div>
+                <label>Last Name:</label>
+            </div>
+            <div>
+                <input type="text">
+            </div>
+            <div>
+                <label>Card Number:</label>
+            </div>
+            <div>
+                <input type="text">
+            </div>
+            <div>
+                <label>CVS:</label>
+            </div>
+            <div>
+                <input type="text">
+            </div>
+            <div>
+                <label>MM/YY</label>
+            </div>
+            <div>
+                <input type="text">
+            </div>
+        </form>
+
+    </section>
     
 </body>
 <!--Footer-->
