4th june - 1.26am

--- a/food.html
+++ b/food.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/food.css">
-    <script src="js/general.js"></script>
+    <script src="js/testing-michael.js"></script>
 </head>
 
 
@@ -46,7 +46,7 @@
 <body>
 
     <!--header image-->
-    <section id="food-top">
+    <section class="food-top">
         
         <img id="food-header" class="food-head-image" src="assets/food/menu_header.jpg">
 
@@ -74,18 +74,20 @@
     </div>
 
     <!--in-page-navigation-->
-    <div class="grid-system in-page-navbar">
-        <nav class="grid-system" id="in-page-nav">
-            <ul>
-                <li><a class="in-page-menu" href="#specials">Specials</a></li>
-                <li><a class="in-page-menu" href="#entree">Entree</a></li>
-                <li><a class="in-page-menu" href="#sides">Sides</a></li>
-                <li><a class="in-page-menu" href="#mains">Mains</a></li>
-                <li><a class="in-page-menu" href="#dessert">Dessert</a></li>
-            </ul>
-        </nav>
+    <div>
+        <div class="grid-system in-page-navbar">
+            <nav class="grid-system" id="in-page-nav">
+                <ul>
+                    <li><a class="in-page-menu" href="#specials">Specials</a></li>
+                    <li><a class="in-page-menu" href="#entree">Entree</a></li>
+                    <li><a class="in-page-menu" href="#sides">Sides</a></li>
+                    <li><a class="in-page-menu" href="#mains">Mains</a></li>
+                    <li><a class="in-page-menu" href="#dessert">Dessert</a></li>
+                </ul>
+            </nav>
+        </div>
+        <hr>
     </div>
-    <hr>
 
 
      <!--Specials-->
