--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -39,25 +39,25 @@
 </header>
 <body class="grid">
     <div class="grid-system">
-        <p class="subhead">DRINKS</p>
+        <p class="subhead">DETAILS</p>
     </div>
 
      <!-- h1 header -->
      <div class="grid-system">
-        <h1 id="page-header">Drinks Menu</h1>
+        <h1 id="page-header">details</h1>
     </div>
     <form action="reserve.payment.html" method="get">
         <div>
             <label>First Name</label>
-            <input type="text" name="firstName">
+            <input type="text" name="firstName" required>
         </div>
         <div>
             <label>Last Name</label>
-            <input type="text" name="lastName">
+            <input type="text" name="lastName" required>
         </div>
         <div>
             <label>Mobile</label>
-            <input type="text" name="Mobile">
+            <input type="text" name="Mobile" required>
         </div>
         <div>
             <label>Email</label>
