--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/food.css">
-    
+
 </head>
 
 
@@ -112,11 +112,16 @@
             </figure>
             </div>
 
-            <div class="landing-menu-buttom">
+            <div class="landing-menu-button">
                 <a href="food.html">
                     <img class="menu-button" src="assets/buttons/menu_button_white.png">
                 </a>
+
+            <div class="landing-menu-button">
+                    <a class="white-button figure-link menu-button" ref="food.html">Menu</a>
+            </div>
         </div>
+
     </section>
 
 
