4th june - 7.41pm

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/food.css">
+    <link rel="stylesheet" type="text/css" href="css/product.css">
 
 </head>
 
@@ -110,18 +111,9 @@
                 </figcaption>
             </a>
             </figure>
-            </div>
 
-            <div class="landing-menu-button">
-                <a href="food.html">
-                    <img class="menu-button" src="assets/buttons/menu_button_white.png">
-                </a>
-
-            <div class="landing-menu-button">
-                    <a class="white-button figure-link menu-button" ref="food.html">Menu</a>
-            </div>
+            <a class="white-button landing-buttons figure-link" ref="food.html">Menu</a>
         </div>
-
     </section>
 
 
@@ -212,12 +204,8 @@
             <a href="https://www.instagram.com/anasonmezebar/?hl=en">
                 <img class="social-media-image" src="assets/landing/socials_04.jpg" alt="social media image"></a>
         </figure>
-    </div>
 
-    <div class="button-link">
-        <a href="https://www.instagram.com/anasonmezebar/?hl=en">
-            <img class="instagram-button" src="assets/buttons/instagram_white.png">
-        </a>
+        <a class="white-button landing-buttons figure-link" ref="food.html">Instagram</a>
     </div>
     </section>
 
