--- a/about.html
+++ b/about.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" type="text/css" href="css/image.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/food.css">
+    <link rel="stylesheet" type="text/css" href="css/product.css">
+
 </head>
 
 
@@ -48,7 +52,7 @@
     
     <!-- h1 header -->
     <div class="grid-system">
-        <h1 id="page-header">ABOUT US</h1>
+        <h1 id="page-header">About Us</h1>
     </div>
 
     <div class="grid-system abouts-intro">
