--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </a>
             </figure>
 
-            <a class="white-button landing-buttons figure-link" ref="food.html">Menu</a>
+            <a class="white-button buttons-layout" ref="food.html">Menu</a>
         </div>
     </section>
 
@@ -205,7 +205,7 @@
                 <img class="social-media-image" src="assets/landing/socials_04.jpg" alt="social media image"></a>
         </figure>
 
-        <a class="white-button landing-buttons figure-link" ref="food.html">Instagram</a>
+        <a class="white-button buttons-layout" ref="https://www.instagram.com/anasonmezebar/?hl=en">Instagram</a>
     </div>
     </section>
 
