--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
-
+    <link rel="stylesheet" type="text/css" href="css/search-page.css">
+    <script src="js/reserve.js"></script>
 </head>
 
 
@@ -44,9 +45,11 @@
 
 
 <body>
-    <!--sub-navigation bar-->
-    <div class="grid-system">
-        <p class="subhead">ABOUT</p>
+    <!-- subheader -->
+    <div class="grid-system" id="subhead-container">
+        <ul class="subhead">
+            <li>ABOUTS</li>
+        </ul>
     </div>
 
     
