--- a/drinks.html
+++ b/drinks.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
-
+    <link rel="stylesheet" type="text/css" href="css/search-page.css">
+    <script src="js/reserve.js"></script>
 </head>
+
 
 <header>
 
@@ -44,9 +46,11 @@
 
 <body class="grid">
 
-    <!--sub-navigation bar-->
-    <div class="grid-system">
-        <p class="subhead">DRINKS</p>
+    <!-- subheader -->
+    <div class="grid-system" id="subhead-container">
+        <ul class="subhead">
+            <li>DRINKS</li>
+        </ul>
     </div>
 
      <!-- h1 header -->
