--- a/food.html
+++ b/food.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
-    <script src="js/testing-michael.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/search-page.css">
+    <script src="js/reserve.js"></script>
 </head>
 
 
@@ -53,11 +54,15 @@
 
     </section>
 
-    <!--sub-navigation bar-->
-    <div class="grid-system">
-        <p class="subhead">MENU</p>
+
+    <!-- subheader -->
+    <div class="grid-system" id="subhead-container">
+        <ul class="subhead">
+            <li>MENU</li>
+        </ul>
     </div>
 
+    
      <!--h1 header-->
      <div class="grid-system">
         <h1 id="page-header">Food Menu</h1>
