--- a/reserve.payment.html
+++ b/reserve.payment.html
@@ -10,8 +10,14 @@
     <link rel="stylesheet" type="text/css" href="css/image.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/spacing.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/food.css">
+    <link rel="stylesheet" type="text/css" href="css/product.css">
+    <link rel="stylesheet" type="text/css" href="css/search-page.css">
     <script src="js/reserve.js"></script>
 </head>
+
+
 <header>
 
     <!--navigation bar-->
