--- a/result.html
+++ b/result.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
-
+    <link rel="stylesheet" type="text/css" href="css/search-page.css">
+    <script src="js/reserve.js"></script>
 </head>
+
 
 <header>
 
