5th june - 11.09am

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
     <script src="js/reserve.js"></script>
 </head>
 
@@ -96,15 +97,9 @@
                 <br>
             <P>When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum. We believe in using fresh, quality and seasonal Sydney ingredients, and work with a range of premium, boutique suppliers.</p>
         </div>
+
+        <a class="blue-button buttons-layout about-reserve-button" ref="reserve.html">Reserve Now</a>
     </section>
-
-
-    <!--Reserve Now Button-->
-    <div id="about-reserve-button">
-        <a href="reserve.html">
-            <img class="reserve-button" src="assets/buttons/reserve_now_blue.png">
-        </a>
-    </div>
 </body>
 
 
