--- a/drinks.html
+++ b/drinks.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
     <script src="js/reserve.js"></script>
 </head>
-
 
 <header>
 
