--- a/search.html
+++ b/search.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
     <script src="js/reserve.js"></script>
 </head>
 
@@ -55,7 +56,7 @@
 
 
     <!-- Header + search bar -->
-    <div class="grid-system">
+    <div class="grid-system search-bar-container">
 
         <h1>Search:</h1> 
 
