--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" type="text/css" href="css/food.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
     <script src="js/reserve.js"></script>
 </head>
+
 
 <header>
 
