--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </a>
             </figure>
 
-            <a class="white-button buttons-layout" ref="food.html">Menu</a>
+            <a class="white-button buttons-layout" href="food.html">Menu</a>
         </div>
     </section>
 
@@ -207,7 +207,7 @@
                 <img class="social-media-image" src="assets/landing/socials_04.jpg" alt="social media image"></a>
         </figure>
 
-        <a class="white-button buttons-layout" ref="https://www.instagram.com/anasonmezebar/?hl=en">Instagram</a>
+        <a class="white-button buttons-layout" href="https://www.instagram.com/anasonmezebar/?hl=en">Instagram</a>
     </div>
     </section>
 
