--- a/product.html
+++ b/product.html
@@ -148,7 +148,7 @@
                     <p class="drink-price price-2">( 21 )</p>
                 </div>
             
-            <a class="blue-button buttons-layout" ref="food.html">Reserve Now</a>
+            <a class="blue-button buttons-layout" href="food.html">Reserve Now</a>
         </section>
 </body>
 
