--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
             <P>When creating our modern dishes we use traditional Turkish cooking methods such as pickling, drying, yogurt, salcha and tarhana making whenever possible and try to keep the use of modern technologies to a minimum. We believe in using fresh, quality and seasonal Sydney ingredients, and work with a range of premium, boutique suppliers.</p>
         </div>
 
-        <a class="blue-button buttons-layout about-reserve-button" ref="reserve.html">Reserve Now</a>
+        <a class="blue-button buttons-layout about-reserve-button" href="reserve.html">Reserve Now</a>
     </section>
 </body>
 
