5th june - 11.52am

--- a/confirmation.html
+++ b/confirmation.html
@@ -22,24 +22,25 @@
 
 <body class="confirmation-page">
 
+    <div class="confirmation-position grid-system">
     <h1 class="confirmation-header">Booking Confirmed</h1>
 
-    <div class="confirmation-text">
+    <div class="confirmation-details">
     <!--function-->
-    <p>Your booking for xxx at</p>
+    <p id="reservation-name">Your booking for MICHAEL<!--function insided--></p>
     
-    <p id="reservation-time"><!--function insided--></p>
+    <p id="reservation-time">at Time (am/pm)<!--function insided--></p>
 
-    <p id="reservation-date"><!--function insided--></p>
+    <p id="reservation-date">on Day, Day Month Year<!--function insided--></p>
 
-    <p>A confirmation email has been sent to you on</p>
+    <p class="confirmation-text">A confirmation email has been sent to you on</p>
 
-    <p id="reservation-email"><!--function insided--></p>
-
-    </div>
+    <p id="reservation-email">Name@email.com<!--function insided--></p>
+    </div>  
 
     <div class="back-to-index-button">
     <a class="white-button" href="index.html">Back to ANASON</a>
     </div>
+</div>
 </body>
 </html>
