5th june - 12.28pm

--- a/drinks.html
+++ b/drinks.html
@@ -15,8 +15,10 @@
     <link rel="stylesheet" type="text/css" href="css/product.css">
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" type="text/css" href="css/confirmation.css">
     <script src="js/reserve.js"></script>
 </head>
+
 
 <header>
 
@@ -340,6 +342,7 @@
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
+        <!--copywrite-->
         <div id="footer-1"> 
             <p class="footer-copyright">&copy; 2023 Anason. All rights reserved.</p>
         </div>
