--- a/search.html
+++ b/search.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/product.css">
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
+    <link rel="stylesheet" type="text/css" href="css/confirmation.css">
     <script src="js/reserve.js"></script>
 </head>
 
@@ -109,10 +110,10 @@
         </a>
         </figure>
     </section>
-
+</body>
     
 <!--Footer-->
-<footer id="footer" class="search-footer">
+<footer id="footer">
 
     <div class="grid-system">
 
@@ -158,6 +159,7 @@
             <a id="footer-column-5" class="footer-gtu-description" href=”mailto:abc@unimelb.edu.au”>bookings@anason.com.au</a>
         </div>
     
+        <!--copywrite-->
         <div id="footer-1"> 
             <p class="footer-copyright">&copy; 2023 Anason. All rights reserved.</p>
         </div>
