5th june -  1.04pm

--- a/food.html
+++ b/food.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anason</title>
+    <title>Anason - Food Menu</title>
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <link rel="stylesheet" type="text/css" href="css/button.css">
     <link rel="stylesheet" type="text/css" href="css/image.css">
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="css/search-page.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
     <link rel="stylesheet" type="text/css" href="css/confirmation.css">
+    <script src="js/testing-michael.js"></script>
     <script src="js/reserve.js"></script>
 </head>
 
@@ -77,8 +78,15 @@
     </div>
 
     <!--Filter Icon-->
-    <div class="grid-system">
-        <img class="filter" src="assets/icons/filter.png" alt="Filter">
+    <div class="grid-system filter-container">
+        <img class="filter-button" src="assets/icons/filter.png" alt="Filter">
+        <div class="filter-menu">
+        <ul>
+            <li><a href="#vegetarian">Vegetarian</a></li>
+            <li><a href="#seafood">Seafood</a></li>
+            <li><a href="#beef">Beef</a></li>
+          </ul>
+        </div>
     </div>
 
     <!--in-page-navigation-->
