--- a/confirmation.html
+++ b/confirmation.html
@@ -26,7 +26,7 @@
 
     <div class="confirmation-details">
     <!--function-->
-    <p id="reservation-name">Your booking for MICHAEL<!--function insided--></p>
+    <p>Your booking for <span id="reservation-name"></span><!--function insided--></p>
     
     <p id="reservation-time">at Time (am/pm)<!--function insided--></p>
 
@@ -34,7 +34,7 @@
 
     <p class="confirmation-text">A confirmation email has been sent to you on</p>
 
-    <p id="reservation-email">Name@email.com<!--function insided--></p>
+    <p><span id="reservation-email"></span><!--function insided--></p>
     </div>  
 
     <div class="back-to-index-button">
