--- a/reserve.detail.html
+++ b/reserve.detail.html
@@ -64,7 +64,7 @@
         </div>
         <div>
             <label>Mobile</label>
-            <input type="text" name="Mobile" required>
+            <input type="tel" name="Mobile" pattern=".{9,10}" required > 
         </div>
         <div>
             <label>Email</label>
@@ -75,7 +75,7 @@
             <input type="text" name="specialre">
         </div>
         
-        <button type="submit">Submit</button>
+        <button type="submit">Continue</button>
 
         
 
